--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,4 +1,4 @@
-name: Android CI - Build APK
+name: Android CI - Build APK (self-contained SDK install)
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      JAVA_HOME: /opt/hostedtoolcache/jdk/17/x64
+      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
 
     steps:
     - name: Checkout
@@ -23,35 +23,59 @@ jobs:
         java-version: '17'
         distribution: temurin
 
-    - name: Cache Gradle packages
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*','**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
+    - name: Install prerequisites
+      run: |
+        sudo apt-get update -y
+        sudo apt-get install -y unzip wget zip
 
-    - name: Install Android SDK tools
-      uses: android-actions/setup-sdk@v2
-      with:
-        api-level: 34
-        build-tools: 34.0.0
-        components: platform-tools,platforms;android-34,build-tools;34.0.0
+    - name: Download Android command-line tools
+      run: |
+        mkdir -p "${ANDROID_SDK_ROOT}/cmdline-tools"
+        cd "${ANDROID_SDK_ROOT}"
+        TOOL_ZIP="commandlinetools-linux-11076708_latest.zip"
+        URL="https://dl.google.com/android/repository/${TOOL_ZIP}"
+        wget -q --show-progress -O cmdline-tools.zip "$URL" || (echo "cmdline-tools download failed" && exit 2)
+        unzip -q -o cmdline-tools.zip -d cmdline-tools
+        mkdir -p cmdline-tools/latest
+        if [ -d cmdline-tools/cmdline-tools ]; then
+          mv -f cmdline-tools/cmdline-tools/* cmdline-tools/latest/ || true
+        else
+          mv -f cmdline-tools/* cmdline-tools/latest/ || true
+        fi
+        rm -f cmdline-tools.zip
 
-    - name: Accept licenses
-      run: yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
+    - name: Add sdkmanager to PATH and accept licenses
+      env:
+        ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+        PATH: ${{ env.ANDROID_SDK_ROOT }}/cmdline-tools/latest/bin:${PATH}
+      run: |
+        yes | sdkmanager --sdk_root="${ANDROID_SDK_ROOT}" --licenses || true
 
-    - name: Grant execute permission to gradlew
+    - name: Install platform-tools, platform and build-tools
+      env:
+        ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+        PATH: ${{ env.ANDROID_SDK_ROOT }}/cmdline-tools/latest/bin:${PATH}
+      run: |
+        sdkmanager --sdk_root="${ANDROID_SDK_ROOT}" "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+
+    - name: Show installed SDK contents
+      env:
+        ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+      run: |
+        ls -la "${ANDROID_SDK_ROOT}"
+        ls -la "${ANDROID_SDK_ROOT}/build-tools" || true
+        "${ANDROID_SDK_ROOT}/build-tools/34.0.0/aapt2" --version 2>/dev/null || echo "aapt2 check skipped or not executable"
+
+    - name: Make gradlew executable
       run: chmod +x ./gradlew
 
     - name: Build (assembleDebug)
-      run: ./gradlew assembleDebug --no-daemon --stacktrace
       env:
         ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+        PATH: ${{ env.ANDROID_SDK_ROOT }}/cmdline-tools/latest/bin:${PATH}
+      run: ./gradlew assembleDebug --no-daemon --stacktrace
 
-    - name: Upload APK artifact
+    - name: Upload debug APK artifact
       uses: actions/upload-artifact@v4
       with:
         name: app-debug-apk
