Make ANDROID_HOME and ANDROID_SDK_ROOT identical (fix SDK location conflict)

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
+      ANDROID_HOME:      ${{ github.workspace }}/android-sdk
+    env:
+      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
 
     steps:
       - name: Checkout
