Make ANDROID_HOME and ANDROID_SDK_ROOT identical (fix SDK location conflict)

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -15,6 +15,9 @@ jobs:
       ANDROID_HOME:      ${{ github.workspace }}/android-sdk
     env:
       ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
+      ANDROID_HOME:      ${{ github.workspace }}/android-sdk
+    env:
+      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
 
     steps:
       - name: Checkout
